@@ -58,6 +58,7 @@ Cacti CHANGELOG
 -feature: Upgrade d3.js to version 7.8.2
 
 1.2.25
+-issue#5275: Boost stats can display odd values when running
 -issue#5277: Boost should not attempt to start if there are no poller_output_boost records
 -issue#5279: Rebuild poller cache does not work as expected
 -issue#5282: Script ss_host_cpu.php does not work as expected when on a remote data collector with hmib enabled
